--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</style>
 </head>
 
-<body>
+<body style="margin: 0;">
 	<div id="app"></div>
 	<script type="module" src="src/main.ts"></script>
 </body>
